Fix <header> elements overflowed when resizing screen and make the page responsive to screen
+ Fix header overflowed by removing margin property, instead using align-items and display by inline-block
+ make the container responsive to the screen by adding 'flex-wrap'

--- a/styles.css
+++ b/styles.css
@@ -18,24 +18,25 @@ img {
 .list {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
 }
 
 .header {
     width: 20%;
     justify-content: center;
-    margin: 0 auto;
-
+    align-items: center;
     text-align: center;
-
-    padding: 1rem;
-
+    display: flex;
+    flex-direction: column;
+    width: auto;
 
 }
 
 h1,
 h2 {
-    display: block;
+    display: inline-block;
     text-align: center;
     color: #C2A162;
     text-transform: uppercase;
@@ -45,8 +46,6 @@ h2 {
     padding: 1rem;
     margin: 1rem;
     box-sizing: border-box;
-
-
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
 
 
@@ -65,11 +64,11 @@ body {
 }
 
 .container {
-    margin: 100px auto;
+    margin: 1rem auto;
     color: black;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 34px;
+    font-size: 30px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -78,7 +77,7 @@ body {
     /* Hide overflow content */
     position: relative;
     /* Position for absolute child elements */
-    max-height: 25rem;
+    max-height: 20rem;
     /* Set initial max height to fit content */
     transition: max-height 0.3s ease, background-color 0.3s ease;
 
@@ -89,6 +88,7 @@ body {
     opacity: 0;
     /* Initially invisible */
     transition: opacity 0.3s ease;
+    justify-content: center;
 }
 
 .container a {
